deploy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: caller-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caller
spec:
  hosts:
    - "*"
  gateways:
    - caller-gateway
  http:
    - match:
        - uri:
            prefix: /caller/
        - uri:
            exact: /caller
      rewrite:
        uri: "/"
      route:
        - destination:
            host: caller
            port:
              number: 8080
    - route:
        - destination:
            host: httpbin
            port:
              number: 8000
